--- a/iniciosesion/css/fondo.css
+++ b/iniciosesion/css/fondo.css
@@ -33,6 +33,17 @@ margin: 1em 0 1em 2em;
 	border-radius:50px;
 }
 
+.kal2 {
+    background-color: #ffffff;
+    -webkit-box-shadow: 0px 0px 14px 3px rgb(0 0 0 / 15%);
+    -moz-box-shadow: 0px 0px 14px 3px rgba(0,0,0,0.15);
+    box-shadow: 0px 0px 14px 3px rgb(0 0 0 / 15%);
+    width: 375px;
+    height: 330px;
+    padding: 3em;
+    border-radius: 50px;
+}
+
 .kaltres{
 	background-color: #ffffff;
 	-webkit-box-shadow: 0px 0px 14px 3px rgba(0,0,0,0.15);
